# Chronicle

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
api_v1/: __init__.py  api.py  schemas.py
api_v1/endpoints/: __init__.py  asr_endpoint.py  health.py  health_chat.py  tts_endpoint.py
config/: __init__.py  logging.py  settings.py
utils/: __init__.py  asr_utils.py  chat_utils.py  dependencies.py  tts_utils.py
